<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/text_title"
        style="@style/TextAppearance.App.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactions_title"
        android:layout_margin="@dimen/spacing_md"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_search"
        style="@style/Widget.App.TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:hint="@string/transactions_search"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginEnd="@dimen/spacing_md">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        app:layout_constraintTop_toBottomOf="@id/input_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginEnd="@dimen/spacing_md"
        app:singleSelection="true"
        app:checkedChip="@+id/chip_all">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_debit"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_debit" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_credit"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_credit" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_transactions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_md"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/chip_group_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactions_empty"
        android:textColor="@color/on_surface_light"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
